# surrogate_graph_diffusion

./: .gitignore  Diff.py  README.md  debug.ipynb  facebook_diffusion.ipynb  graph.py  graph_diffusion.ipynb  hyperbolic_cross.py  main.py  poly_approx_twitter.py  poly_approximation.ipynb  poly_approximation_twitter.ipynb  poly_diff.py  polynomial_surrogate.ipynb  pyproject.toml  real_world_examples.ipynb  requirements.txt  test_equad.ipynb  test_equad_figure7-2.ipynb  test_equad_mod.ipynb  twitter_ls.txt  visuals.py
alessios_notebooks/: debug.ipynb  facebook_diffusion.ipynb  poly_approximation_twitter.ipynb  real_world_examples.ipynb  twitter_cs.txt  twitter_plots.ipynb
kylians_notebooks/: graph_diffusion.ipynb  poly_approximation.ipynb  test_equad.ipynb  test_equad_figure7-2.ipynb
ma_thesis/: main.tex  thesis_refs.bib
results/: ED_d10n19HC_1000-6000-1000_LS_k6.txt  ED_d10n19HC_1000-6000-1000_QCBP_k6.txt  ED_d10n19HC_1000-6000-1000_wQCBP_k6.txt  ED_d10n19HC_250-1000-250_QCBP_k6.txt  ED_d10n19HC_250-1000-250_wQCBP_k6.txt  ED_d10n19HC_50-1000-350_QCBP_k6.txt  ED_d10n19HC_50-1000-350_wQCBP_k6.txt  ED_d10n5TD_1000-6000-1000_LS_k6.txt  ED_d10n5TD_1000-6000-1000_QCBP_k6.txt  ED_d10n5TD_1000-6000-1000_wQCBP_k6.txt  ED_d10n5TD_250-1000-250_QCBP_k6.txt  ED_d10n5TD_250-1000-250_wQCBP_k6.txt  ED_d10n5TD_50-1000-350_QCBP_k6.txt  ED_d10n5TD_50-1000-350_wQCBP_k6.txt  ED_d3n12TD_100-825-175_LS_k10.txt  ED_d3n12TD_100-825-175_LS_k15.txt  ED_d3n12TD_100-825-175_LS_k5.txt  ED_d3n178HC_1000-6000-1000_LS_k12.txt  ED_d3n178HC_1000-6000-1000_QCBP_k12.txt  ED_d3n20HC_25-325-25_LS_k5.txt  (+55 more)
(+47 files in other folders)
